<resources>
    <string name="app_name">Llegaraquí</string>
    <string name="action_settings">CONTACTAR</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="lbl_sponsors">Nuestros auspiciantes:</string>
    <string name="lbl_tab1">Auspiciantes</string>
    <string name="lbl_tab2">CRadio.ec</string>
    <string name="lbl_tab3">Contactar</string>
    <string name="modal_title">Información</string>
    <string name="modal_btn_visit">Visitar</string>
    <string name="modal_btn_map">Ir a mapa</string>
    <string name="register_email">Correo Electrónico</string>
    <string name="register_first_name">Nombres</string>
    <string name="register_last_name">Apellidos</string>
    <string name="register_message">Mensaje</string>
    <string name="lbl_contact_us">CONTACTANOS</string>
    <string name="btnSend">Enviar</string>
    <string name="btnCancel">Cancelar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
