<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:scrollbarStyle="outsideOverlay"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/modalParentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center">

        <ImageView
            android:id="@+id/sponsorLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/ads" />

        <TextView
            android:id="@+id/lblInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sponsorLogo"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/modal_title"
            android:textColor="@color/darkGray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblInformation"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="27dp"
            android:text="Nombre"
            android:textColor="@color/darkGray"
            android:textSize="24sp" />

        <WebView
            android:id="@+id/contentHtml"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblName"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@null">

        </WebView>

        <Button
            android:id="@+id/btnVisitUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contentHtml"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/modal_btn_visit"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnGoMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btnVisitUs"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/modal_btn_map"
            android:textColor="#FFFFFF" />

    </RelativeLayout>

</ScrollView>
