<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:id="@+id/sponsorsLayout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.passeapp.dark_legion.cradioapp.FragmentTabSponsors">


    <!-- TODO: Update blank fragment layout -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:gravity="center"
                android:id="@+id/contactFormLayout"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_contact_us"
                        android:layout_marginStart="10dp"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@color/darkGray"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <EditText
                        android:id="@+id/register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:hint="@string/register_email"
                        android:inputType="textEmailAddress"
                        android:gravity="start"
                        android:layout_weight="1"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <EditText
                        android:id="@+id/register_subject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:hint="@string/register_subject"
                        android:inputType="textEmailSubject"
                        android:gravity="start"
                        android:layout_weight="1"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="1"
                        android:padding="0dp"
                        android:layout_margin="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="10dp"
                            android:text="@string/register_message"
                            android:textSize="18sp"
                            android:gravity="top|center"
                            android:layout_weight="1"
                            android:textColor="@color/darkGray"/>

                        <EditText
                            android:id="@+id/register_message"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/textview_border"
                            android:gravity="top|start"
                            android:inputType="textMultiLine"
                            android:lines="8"
                            android:overScrollMode="always"
                            android:scrollHorizontally="false"
                            android:scrollbarStyle="insideInset"
                            android:scrollbars="vertical"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:weightSum="2">

                        <Button
                            android:id="@+id/btnCancel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/btnCancel"
                            android:layout_margin="5dp"
                            android:background="@android:color/darker_gray"/>

                        <Button
                            android:id="@+id/btnSend"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/btnSend"
                            android:layout_margin="5dp"
                            android:background="@color/colorPrimary"/>

                    </LinearLayout>
                </TableRow>
            </TableLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_sponsors"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:layout_gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <ProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

                <com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView
                    android:id="@+id/sponsorsListView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:dividerHeight="2dp">

                </com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView>

                <!--<GridView
                    android:id="@+id/sponsorsListView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:numColumns="2"
                    android:verticalSpacing="25dp"
                    android:horizontalSpacing="20dp"
                    android:scrollbars="vertical"
                    android:layout_weight="1">

                </GridView>-->

        </TableRow>

    </TableLayout>

</android.support.v4.widget.NestedScrollView>


